--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,4 @@
-<form id="login-form" action="/login" method="post" >
-  <header>
-    <h1>Account Login</h1>
-  </header>
-  <input type="email" id="email-input" name="email" placeholder="email">
-  <input type="password" id="password-input" name="password" placeholder="password">
-  <button type="submit">Sign in</button>
-</form>
+<h1>
+  Welcome Back! {{ name }}!
+</h1>
+<a href="/logout">logout</a>
